--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: CompSci Blogs
-description: "August 2023 to June 2024"
-owner_name: Nighthawk Coders
+title: Our Pair Blog
+description: "CSA Pair '23-'24"
+owner_name: Tanay Patel & Paaras Purohit
 github_username: nighthawkcoders
-baseurl: "/student"
 remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
