--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Our Pair Blog
 description: "CSA Pair '23-'24"
 owner_name: Tanay Patel & Paaras Purohit
-github_username: nighthawkcoders
+github_username: tanayp327
 remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
